@@ -19,6 +19,7 @@ $Id$
 	- Added Transcend-MTS400 drives (#847)
 	- Added Intel 540 Series SSDs (#803)
 	- Added Intel 3710 Series SSDs (#824)
+	- Added Micron 5100 ECO, PRO, and MAX Models (#861)
 	
 2017-09-20  Alex Samorukov  <samm@os2.kiev.ua>
 
